# bot-aukerman

./: .gitignore  BotPerformer.py  DialogueLine.py  HumanPerformer.py  Performance.py  Performer.py  README.md  SceneAction.py  SceneHeader.py  ScriptComponent.py  __init__.py  pyproject.toml
prompts/: chatgpt.txt  gpt2.txt  gpt4all.txt  minimal-predict.txt  minimal.txt  pygmalion.txt  rwkv-raven.txt
src/bot_aukerman/: BotPerformer.py  Generator.py  Interpreter.py  Performance.py  Performer.py  SceneHeader.py  ScriptComponent.py  __init__.py  bot_aukerman.py  bot_performer.py  constants.py  dialogue.py  generator.py  human_performer.py  interpreter.py  logging.py  performance.py  scene_action.py  scene_header.py  script_component.py  server.py
src/bot_aukerman/prompts/: chatgpt.txt  gpt4all.txt  minimal-predict.txt  minimal.txt  pygmalion.txt
tests/: improv-test.py  server-test.py
