[tool.poetry]
name = "bot-aukerman"
version = "0.1.0"
description = "A library for generating improvised performances with large language models; optionally alongside human performers."
authors = ["Cammy <cameronsteele@steelecameron.com>"]
readme = "README.md"
packages = [
	{ include = "bot_aukerman", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10,<3.11" #@TODO coqui.tts requires 3.10 for now
appdirs = "^1.4.4"
llmber = {path = "../llmber"}
vosk_imp = {path = "../vosk-imp"}
coqui_imp = {path = "../coqui-imp"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
