[project]
name = "bot-aukerman"
version = "0.1.0"
description = "A library for generating improvised performances with large language models; optionally alongside human performers."
authors = [
	{ name = "Cammy", email = "cameronsteele@steelecameron.com" }
]
readme = "README.md"
dependencies = [
	"python >= 3.9 < 3.11",
	"appdirs",

	#@TODO: remove these when they're on pypi
	"llmber @ git+https://github.com/cammytown/llmber.git",
	"vosk_imp @ git+https://github.com/cammytown/vosk-imp.git",
	"coqui_imp @ git+https://github.com/cammytown/coqui-imp.git",
]

[build-system]
requires = ["setuptools >= 67.7.2"]
build-backend = "setuptools.build_meta"
