[project]
name = "bot-aukerman"
version = "0.1.0"
description = "A library for generating improvised performances with large language models; optionally alongside human performers."
authors = [
	{ name = "Cammy", email = "cameronsteele@steelecameron.com" }
]
readme = "README.md"
requires-python = ">=3.9.0,<3.11"
dependencies = [
	"appdirs >=1.4.4,<2.0.0",
	"zmq >=25.0.2, <26.0.0", # only for server

	#@TODO: remove these when they're on pypi
	#"llmber @ git+https://github.com/cammytown/llmber.git",
	#"vosk_imp @ git+https://github.com/cammytown/vosk-imp.git",
	#"coqui_imp @ git+https://github.com/cammytown/coqui-imp.git",
]

[build-system]
requires = ["setuptools >= 67.7.2", "wheel >=0.40.0"]
build-backend = "setuptools.build_meta"
